--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "animalia",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "build": "",
+    "start": ""
   },
   "dependencies": {
     "hono": "^4.3.4"
