feat: setup database connection

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,21 @@
 services:
-  api:
-    image: demo-api
-    build:
-      context: .
-    ports:
-      - "3000:3000"
-    depends_on:
-      - database
   database:
     image: postgres:alpine
-    environment:
-      POSTGRES_USER: example_user
-      POSTGRES_PASSWORD: example_password
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    env_file:
+      - path: .env
+
+volumes:
+  pgdata:
+
+  # api:
+  #   image: animalia
+  #   build:
+  #     context: .
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     - database
