--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "animalia",
+  "type": "module",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
     "start": "bun run src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.3.4"
+    "@types/node": "^20.12.12",
+    "@types/pg": "^8.11.6",
+    "dotenv": "^16.4.5",
+    "hono": "^4.3.4",
+    "pg": "^8.11.5"
   },
   "devDependencies": {
     "@types/bun": "latest"
