--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "bun run src/index.ts"
   },
   "dependencies": {
+    "@prisma/client": "5.14.0",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
     "dotenv": "^16.4.5",
@@ -13,6 +14,7 @@
     "pg": "^8.11.5"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "prisma": "^5.14.0"
   }
 }
