--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
     "dotenv": "^16.4.5",
-    "hono": "^4.3.4",
-    "pg": "^8.11.5"
+    "hono": "^4.3.4"
   },
   "devDependencies": {
     "@types/bun": "latest",
