--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "animalia",
   "type": "module",
   "scripts": {
-    "dev": "bun run --hot src/index.ts",
-    "start": "bun run src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
     "@types/node": "^20.12.12",
-    "@types/pg": "^8.11.6",
+    "@hono/node-server": "^1.11.1",
     "dotenv": "^16.4.5",
-    "hono": "^4.3.4"
+    "hono": "^4.4.0"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1",
     "prisma": "^5.14.0"
   }
 }
