fix: use node instead of bun

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "start": "tsx src/index.ts"
+    "start": "tsx src/index.ts",
+    "generate": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
