--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts",
-    "generate": "prisma generate"
+    "generate": "prisma generate",
+    "migrate": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
+    "seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@hono/node-server": "^1.11.1",
     "@prisma/client": "5.14.0",
     "@types/node": "^20.12.12",
-    "@hono/node-server": "^1.11.1",
     "dotenv": "^16.4.5",
     "hono": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1",
-    "prisma": "^5.14.0"
+    "prisma": "^5.20.0",
+    "tsx": "^4.7.1"
   }
 }
