--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.11.1",
-    "@prisma/client": "5.14.0",
+    "@prisma/client": "^5.20.0",
     "@types/node": "^20.12.12",
     "dotenv": "^16.4.5",
     "hono": "^4.4.0"
